<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/chkLanche01"
            android:layout_marginTop="40dp"
            android:layout_margin="10dp"/>
        <ImageView
            android:layout_width="@dimen/img_dimensao"
            android:layout_height="@dimen/img_dimensao"
            android:src="@drawable/hamburguer"
            android:id="@+id/imgLanche01"
            android:layout_toRightOf="@id/chkLanche01"
            android:layout_margin="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hamburguer_01"
            android:id="@+id/txtNomeLanche01"
            android:layout_toRightOf="@id/imgLanche01"
            android:layout_marginTop="20dp"
            android:layout_margin="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/r_15_00"
            android:id="@+id/txtPrecoLanche01"
            android:layout_toRightOf="@id/imgLanche01"
            android:layout_below="@id/txtNomeLanche01"
            android:layout_margin="10dp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detalhes"
            android:layout_alignParentRight="true"
            android:onClick="detalhes"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/chkLanche02"
            android:layout_marginTop="25dp"
            android:layout_margin="10dp"/>
        <ImageView
            android:layout_width="@dimen/img_dimensao"
            android:layout_height="@dimen/img_dimensao"
            android:src="@drawable/hamburguer"
            android:id="@+id/imgLanche02"
            android:layout_toRightOf="@id/chkLanche02"
            android:layout_margin="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hamburguer_02"
            android:id="@+id/txtNomeLanche02"
            android:layout_toRightOf="@id/imgLanche02"
            android:layout_marginTop="20dp"
            android:layout_margin="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/r_15_00"
            android:id="@+id/txtPrecoLanche02"
            android:layout_toRightOf="@id/imgLanche02"
            android:layout_below="@id/txtNomeLanche02"
            android:layout_margin="10dp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detalhes"
            android:layout_alignParentRight="true"
            android:onClick="detalhes"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/chkLanche03"
            android:layout_marginTop="25dp"
            android:layout_margin="10dp"/>
        <ImageView
            android:layout_width="@dimen/img_dimensao"
            android:layout_height="@dimen/img_dimensao"
            android:src="@drawable/hamburguer"
            android:id="@+id/imgLanche03"
            android:layout_toRightOf="@id/chkLanche03"
            android:layout_margin="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hamburguer_03"
            android:id="@+id/txtNomeLanche03"
            android:layout_toRightOf="@id/imgLanche03"
            android:layout_marginTop="20dp"
            android:layout_margin="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/r_15_00"
            android:id="@+id/txtPrecoLanche03"
            android:layout_toRightOf="@id/imgLanche03"
            android:layout_below="@id/txtNomeLanche03"
            android:layout_margin="10dp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detalhes"
            android:layout_alignParentRight="true"
            android:onClick="detalhes"/>
    </RelativeLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/comprar"
        android:onClick="comprar"/>





</LinearLayout>